# evolution-todo-app

./: .gitignore  AGENTS.md  CLAUDE.md  MCP_SETUP.md
.claude/: AGENT_INVOCATION_PROTOCOL.md  AGENT_OWNERSHIP_MATRIX.md
.claude/agents/: better-auth-guardian.md  core-todo-domain.md  data-schema-guardian.md  domain-guardian.md  error-reliability-architect.md  integration-orchestrator.md  nextjs-frontend-architect.md  python-backend-architect.md  spec-governance-enforcer.md  test-strategy-architect.md
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
Phase-1/: .env.example  .gitignore  README.md  pyproject.toml
Phase-1/src/: main.py
Phase-1/src/cli/: menu.py  operations.py
Phase-1/src/domain/: exceptions.py  task.py
Phase-1/src/storage/: memory_repository.py  repository_interface.py
Phase-1/tests/integration/: test_complete_workflow.py  test_create_workflow.py  test_delete_workflow.py  test_e2e.py  test_main.py  test_menu.py  test_update_workflow.py  test_view_workflow.py
Phase-1/tests/unit/: test_main_logging.py
Phase-1/tests/unit/domain/: test_task_entity.py  test_task_lifecycle.py  test_task_validation.py
Phase-1/tests/unit/storage/: test_memory_repository.py
history/adr/: 0001-in-memory-dictionary-storage-for-phase-i.md  0002-exception-based-error-handling-strategy.md  0003-uuid4-for-task-identifiers.md  0004-constitution-v1-1-0-code-quality-amendments.md
history/prompts/001-fullstack-todo-web/: 0001-phase-ii-full-stack-architecture-plan.plan.prompt.md  0003-better-auth-security-audit.misc.prompt.md  (+2 more)
mcp-server/: .gitignore  QUICK_START.md  README.md  claude_desktop_config.example.json  package.json  test.mjs
mcp-server/src/: index.ts
phase-2/: DEPLOYMENT.md
phase-2/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
phase-2/backend/migrations/: README.md  env.py
phase-2/backend/migrations/versions/: 001_create_users_table.py  002_create_categories_table.py  003_create_tags_table.py  004_create_tasks_table.py  005_create_task_tag_table.py  006_create_indexes.py  007_insert_system_categories.py  008_change_user_id_to_string.py  009_create_conversations_table.py  010_create_messages_table.py  011_create_recurrence_rules_table.py  012_create_reminder_metadata_table.py  013_create_push_subscriptions_table.py  014_add_due_date_to_tasks.py  015_drop_conversations_user_fk.py
phase-2/backend/scripts/: setup_rls.py
phase-2/backend/src/: __init__.py  database.py  main.py
phase-2/backend/src/api/: dependencies.py
phase-2/backend/src/api/routes/: __init__.py  auth.py  categories.py  tags.py  tasks.py
phase-2/backend/src/middleware/: __init__.py  rate_limit.py
phase-2/backend/src/models/: __init__.py  category.py  tag.py  task.py  task_tag.py  user.py
phase-2/backend/src/utils/: __init__.py  auth.py  errors.py  logging.py
phase-2/backend/tests/: __init__.py  conftest.py
phase-2/backend/tests/integration/: __init__.py  test_account_lockout.py  test_audit_logging.py  test_auth_password_reset.py  test_auth_signin.py  test_auth_signup.py  test_cascade_deletes.py  test_categories.py  test_check_constraints.py  test_connection_pooling.py  test_data_persistence.py  test_error_response_format.py  test_jwt_security.py  test_openapi_schema.py  test_rate_limiting.py  test_tags.py  test_task_combined_query.py  test_task_complete.py  test_task_create.py  test_task_delete.py  test_task_filters.py  test_task_list.py  test_task_search.py  test_task_sorting.py  test_task_update.py  test_unique_constraints.py  test_user_isolation.py
phase-2/backend/tests/performance/: test_task_performance.py
phase-2/backend/tests/unit/: __init__.py  test_auth_utils.py  test_jwt_validation.py  test_priority_validation.py  test_task_model.py  test_task_tag_update.py
phase-2/frontend/: .dockerignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  vercel.json
phase-2/scripts/: e2e-integration-test.py
phase-3/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
phase-3/backend/src/: __init__.py  database.py  logging_config.py  main.py
phase-3/backend/src/agent/: config.py  prompts.py
phase-3/backend/src/api/routes/: chat.py  chatkit.py  conversations.py  push.py
phase-3/backend/src/api/schemas/: chat.py
phase-3/backend/src/mcp/: server.py
phase-3/backend/src/mcp/tools/: recurrence_tools.py  reminder_tools.py  task_tools.py
phase-3/backend/src/mcp_tools/: database.py  server.py
phase-3/backend/src/mcp_tools/tools/: recurrence_tools.py  reminder_tools.py  task_tools.py
phase-3/backend/src/middleware/: rate_limit.py
phase-3/backend/src/models/: __init__.py  category.py  conversation.py  message.py  push_subscription.py  recurrence.py  reminder.py  task.py
phase-3/backend/src/scheduler/: jobs.py
phase-3/backend/src/services/: chat_service.py  recurrence_service.py  reminder_service.py
phase-3/backend/tests/: conftest.py
phase-3/backend/tests/integration/: test_chat_api.py  test_conversation_api.py  test_phase2_imports.py  test_push_api.py  test_scheduler.py
phase-3/backend/tests/unit/: test_agent_config.py  test_health_check.py  test_logging_config.py  test_mcp_database.py  test_recurrence_calc.py  test_recurrence_tools.py  test_reminder_service.py  test_reminder_tools.py  test_task_tools.py
phase-3/frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
phase-4/docker/: backend.Dockerfile  backend.dockerignore  frontend.Dockerfile  frontend.dockerignore
phase-4/scripts/: build.sh  deploy.sh  teardown.sh
specs/001-fullstack-todo-web/: plan.md  spec.md  tasks.md
specs/001-task-crud-operations/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-kubernetes-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+129 files in other folders)
