[project]
name = "todo-app"
version = "0.1.0"
description = "Phase I - In-Memory Python Console Todo Application"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=24.0",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term --cov-report=html"
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80.0
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []
exclude = [".venv", "venv", "__pycache__", "*.egg-info"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
